# fretboard-trainer

./: .gitignore  fingerboard_trainer.py  pyproject.toml  requirements.txt
notes/: rubberband.py
