[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fretboard-trainer"
version = "0.1.0"
description = "A script to help with guitar fretboard memorization"
requires-python = ">=3.12"
license = { text = "UNLICENSED" }

# Runtime dependencies
dependencies = [
  "click==8.3.0",
  "keyboard==0.13.5",
  "playsound==1.2.2",
  "pygame==2.6.1",
  "simpleaudio==1.0.4",
]

[project.optional-dependencies]
# Developer tooling
dev = [
  "black==25.9.0",
  "mypy==1.18.2",
  "mypy_extensions==1.1.0",
  "ruff==0.14.2",

  # black/ruff dependency chain
  "packaging==25.0",
  "pathspec==0.12.1",
  "platformdirs==4.5.0",
  "pytokens==0.2.0",
  "typing_extensions==4.15.0",

  # build tooling
  "setuptools==80.9.0",
  "wheel==0.45.1",
]

[project.scripts]
fretboard-trainer = "fretboard_trainer:main"
